test/trivial/deitz/vars-scopes/var_decl_strange2.good
var_decl_strange2.chpl:1: error: statement references variable 'y' before it is defined
